--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ apply from: 'dependencies.gradle'
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
@@ -15,10 +15,17 @@ allprojects {
         androidBuildToolsVersion = BUILD_VERSION_TOOLS
         androidMinSdkVersion = Integer.parseInt(MIN_SDK)
         androidTargetSdkVersion = Integer.parseInt(TARGET_SDK)
-        androidCompileSdkVersion =Integer.parseInt(COMPILE_SDK)
+        androidCompileSdkVersion = Integer.parseInt(COMPILE_SDK)
 
         androidApplicationId = APPLICATION_ID
         androidVersionCode = Integer.parseInt(VERSION_CODE)
         androidVersionName = VERSION_NAME
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
     }
 }
